--- a/MyMvc/Views/Test/Index.cshtml
+++ b/MyMvc/Views/Test/Index.cshtml
@@ -15,6 +15,7 @@
 
     <div>
         @(new HtmlString(ViewData["str"] as string))
+        <a href="/Test/Url?id=12">点击我</a>
     </div>
     <button id="send" value="发送邮件">发送邮件</button>
     <script>
